# Sales-genie-v1-Windows-

./: .gitignore  README.md  index.html  ledger.html  package-lock.json  package.json  vite.config.js
server/: README.md  build_sidecar.ps1  local_serve.py  modal_serve.py  requirements-local.txt  requirements-modal.txt  requirements-stt.txt  setup-modal.ps1  stt_server.py  stt_server.spec
src/: App.jsx  ledger.css  ledger.jsx  sounds.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  inference.rs  main.rs  recorder.rs  storage.rs  transcriber.rs  warehouse.rs
src/components/: ConfigLedger.jsx  Genie.jsx  OppModal.jsx
