[package]
name = "genie-recorder"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
chrono = "0.4"
once_cell = "1.19"
dirs-next = "2.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
